2004-09-03   Christian Stimming <stimming@tuhh.de>

	* tools/typemaker/code_c.c: Add include config.h in the
	output. Make the auto-generation warning in the output more clear.

===========================================================================
MARK: released gwenhywfar-1.0.0 (2004/09/02)
===========================================================================


2004/09/01: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a tool which allows me to create simple data containers more easily


2004-09-01   Christian Stimming <stimming@tuhh.de>

	* src/gwenhywfar.c: Replace fprintf with DBG_DEBUG.


2004/08/31: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- waitcallback: added nesting level information


2004/08/30: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- valgrind session: 
  - the system is now asked for the home dir only the first
    time a program issues such a request. It is then copied to an internal
    buffer.
  - fixed some other memory leaks
- replaced fprintf with DBG_INFO in posix/libloader.c


2004/08/29: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- adapted mklistdoc to new macro names
- Valgrind-Session:
  - added GWEN_WaitCallback_free() to public headers


2004/08/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- BufferedIO: Added function GWEN_BufferedIO_WriteRawForced


2004-08-24   Christian Stimming <stimming@tuhh.de>

	* gwenhywfar.iss.in: Add spec file for the Inno Setup Compiler
	which will create a Windows Setup.exe program for the whole
	package, see http://www.jrsoftware.org/isdl.php. Added "make
	setup" for this target.


2004-08-23   Christian Stimming <stimming@tuhh.de>

	* src/os/gwentime.h: Include time.h.
	
	* src/base/debug.h: Adapted the non-variadic-macro function